--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.4.7",
     "jade": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "coffee-script": "~1.6.3"
   }
 }
