--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "./node_modules/.bin/coffee app.coffee"
   },
   "dependencies": {
     "express": "3.4.7",
